--- a/src/pages/About/AboutPage.css
+++ b/src/pages/About/AboutPage.css
@@ -1,16 +1,12 @@
-/* קובץ CSS לדף אודות */
-
 .about-container {
-  /* display: flex; */
-  /* justify-content: center;
-  align-items: center; */
+  align-items: center;
   background-color: #f5f5f5;
   min-height: 100vh;
   flex-direction: column;
 }
 
 .about-content {
-  /* display: flex; */
+  display: flex;
   justify-content: space-between;
   align-items: center;
   width: 100%;
@@ -23,7 +19,7 @@
   padding-right: 40px;
 }
 
-.about-info h2 {
+.about-info h1 {
   font-size: 36px;
   margin-bottom: 10px;
 }
@@ -74,12 +70,30 @@
 }
 /* קובץ CSS לדף אודות */
 
+.about-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #f5f5f5;
+  min-height: 100vh;
+  flex-direction: column;
+}
+
+.about-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  max-width: 1200px;
+  padding: 40px;
+}
+
 .about-info {
   flex: 1;
   padding-right: 40px;
 }
 
-.about-info h2 {
+.about-info h1 {
   font-size: 36px;
   margin-bottom: 10px;
 }
@@ -127,4 +141,19 @@
   padding: 10px 0;
   width: 100%;
   text-align: center;
+}
+
+@media (max-width: 500px) {
+  .about-container {
+    padding-left: 20vw;
+  }
+
+  .about-details {
+    margin-top: 20vw;
+  }
+
+  .about-details p {
+    margin-top: 10vh;
+    width: 75vw;
+  }
 }
