--- a/src/pages/Authentication/Login/LoginForm.css
+++ b/src/pages/Authentication/Login/LoginForm.css
@@ -7,14 +7,12 @@ body {
 .login-container {
   background-color: #f5f5f5;
   box-sizing: border-box;
-  /* display: flex; */
-  justify-content: center;
   min-height: 85.1vh;
 }
 
 .login-content {
   box-sizing: border-box;
-  /* display: flex; */
+  display: flex;
   justify-content: space-around;
   align-items: center;
   width: 100%;
@@ -24,7 +22,7 @@ body {
 .login-img {
   display: inline-block;
   background-color: #f5f5f5;
-  /* display: flex; */
+  display: flex;
 }
 
 .login-img img {
@@ -32,7 +30,7 @@ body {
   width: 1000px;
 }
 
-.login-info h2 {
+.login-info h1 {
   font-size: 36px;
   margin-bottom: 10px;
 }
@@ -136,4 +134,23 @@ label {
 
 .haveToLogInMessage {
   color: red;
+}
+
+@media (max-width: 500px) {
+  .login-content img {
+    display: none;
+  }
+
+  .login-content {
+    flex-direction: column;
+  }
+
+  .login-form > * {
+    margin-left: 10%;
+  }
+
+  .login-form .form-group input {
+    width: 80vw;
+    /* margin-left: 10%; */
+  }
 }
