--- a/src/pages/Authentication/Register/RegistrationForm.css
+++ b/src/pages/Authentication/Register/RegistrationForm.css
@@ -16,15 +16,13 @@ a {
 }
 
 .registration-container {
-  /* display: flex; */
-  /* justify-content: center;
-  align-items: center; */
+  align-items: center;
   min-height: 100vh;
   background-color: #f5f5f5;
 }
 
 .registration-content {
-  /* display: flex; */
+  display: flex;
   justify-content: space-between;
   align-items: center;
   width: 100%;
@@ -37,7 +35,7 @@ a {
   padding-right: 40px;
 }
 
-.registration-description h2 {
+.registration-description h1 {
   font-size: 36px;
   margin-bottom: 10px; /* Decreased spacing */
 }
@@ -135,4 +133,24 @@ label {
 
 .registered {
   color: red;
+}
+
+@media (max-width: 500px) {
+  .registration-description {
+    margin-left: 8%;
+    text-align: center;
+  }
+
+  .registration-description p {
+    /* margin-left: 5vw; */
+  }
+
+  .registration-content {
+    flex-direction: column;
+  }
+
+  .registration-form {
+    width: 90vw;
+    margin-top: 10vw;
+  }
 }
