--- a/src/pages/LandingPage/Inspiration/Inspiration.css
+++ b/src/pages/LandingPage/Inspiration/Inspiration.css
@@ -1,7 +1,8 @@
 .inspiration {
   background: #1368ce;
-  margin-left: auto;
-  margin-right: auto;
+  /* margin-left: auto; */
+  /* margin-right: auto; */
+  width: clamp(1250px, auto, 1600px);
 }
 
 .inspiration h1 {
@@ -11,13 +12,24 @@
 .inspiration h1 {
   color: #fff;
   padding: 40px 30px;
+  font-size: 44px;
 }
 
 .inspiration-cards {
-  /* display: flex; */
-  justify-content: center;
   flex-wrap: wrap;
-  width: 1600px;
   margin-left: auto;
   margin-right: auto;
+  width: clamp(1250px, 50vw, 1600px);
+}
+
+@media (max-width: 500px) {
+  .inspiration-cards {
+    margin-left: 10vw;
+  }
+
+  @media (max-width: 360px) {
+    .inspiration-cards {
+      margin-left: 5%;
+    }
+  }
 }
