--- a/src/pages/LandingPage/Title/Title.css
+++ b/src/pages/LandingPage/Title/Title.css
@@ -1,32 +1,30 @@
 .external-container {
   background: #c60929;
-  /* height: 619px; */
-  padding-block: 4vw;
-  /* display: flex; */
-  justify-content: center;
+  height: 619px;
+  margin-left: auto;
+  margin: auto;
 }
 
 .internal-container {
   background: #e21b3c;
   color: #fff;
-  /* display: flex; */
-  gap: 16px;
-  justify-content: space-between;
+  display: flex;
+  justify-content: space-around;
   align-items: center;
-  width: clamp(350px, 80vw, 1400px);
-  padding: 32px;
-  margin: auto;
+  /* width: 1400px; */
+  width: clamp(300px, 90vw, 1400px);
+  height: 500px;
+  margin-top: 55px;
 }
 
 .internal-container .text h1 {
+  font-size: 40px;
   font-weight: 700;
 }
 
 img {
-  object-fit: cover;
-
   height: 431px;
-  width: clamp(400px, 50vw, 756px);
+  width: 756px;
 }
 
 .btn {
@@ -42,11 +40,20 @@ img {
   cursor: pointer;
 }
 
-@media (max-width: 750px) {
+@media (max-width: 500px) {
+  .external-container {
+    height: 1200px;
+  }
+
   .internal-container {
     flex-direction: column;
+    width: 80vw;
+    height: 1000px;
+    padding: 0 60px;
   }
-  img {
-    width: 90%;
+
+  .internal-container img {
+    width: 85vw;
+    margin-right: 5vw;
   }
 }
