--- a/src/pages/Presentation/NewPresentationForm/NewPresenationForm.css
+++ b/src/pages/Presentation/NewPresentationForm/NewPresenationForm.css
@@ -51,8 +51,7 @@ body {
   border-color: #007bff;
 }
 
-.lecture-form input[type="text"],
-.lecture-form input[type="file"] {
+.lecture-form input {
   width: 50%;
   padding: 12px;
   margin: 20px 0;
@@ -85,7 +84,7 @@ body {
 
 .lectureDetails {
   height: 83.5vh;
-  /* display: flex; */
+  display: flex;
   flex-direction: column;
   justify-content: center;
   text-align: center;
@@ -104,5 +103,15 @@ body {
   }
   60% {
     transform: translateY(-15px);
+  }
+}
+
+@media (max-width: 500px) {
+  #form {
+    margin-left: 0;
+  }
+
+  .lecture-form input {
+    width: 80%;
   }
 }
