--- a/src/pages/Authentication/Login/LoginForm.css
+++ b/src/pages/Authentication/Login/LoginForm.css
@@ -13,7 +13,7 @@ body {
 .login-content {
   box-sizing: border-box;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   width: 100%;
   padding: 40px;
@@ -22,12 +22,13 @@ body {
 .login-img {
   display: inline-block;
   background-color: #f5f5f5;
+  margin-right: 5vw;
   display: flex;
 }
 
 .login-img img {
   height: 700px;
-  width: 1000px;
+  width: clamp(500px, 50vw, 1000px);
 }
 
 .login-info h1 {
